Manuscript now out in the wild

--- a/README
+++ b/README
@@ -23,7 +23,7 @@ a way that's easy enough for contributors to access.
 
 But for those who wish to fork and experiment on their own, all content here is
 hereby released under the Creative Commons Attribution-Noncommercial-Share Alike
-3.0 license.  If you have any questions about legal usage, contact me, and I'll
+3.0 license ( http://creativecommons.org/licenses/by-nc-sa/3.0/ ).  If you have any questions about legal usage, contact me, and I'll
 talk with O'Reilly.
 
   gregory.t.brown at gmail.com
